feat: add GET/players/{id}
