# swagger/swagger.yaml
@@ -182,6 +182,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /players/{playerId}:
+    get:
+      tags:
+      - player
+      summary: Find Player by ID
+      description: Returns a single player
+      operationId: getPlayerDetails
+      parameters:
+      - name: playerId
+        in: path
+        description: ID of player to return
+        required: true
+        schema:
+          type: integer
+          format: int
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Player'
+        404:
+          description: Player Not Found
+          content: 
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     Chessclub:
